Added error for invalid login credentials.

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -124,7 +124,7 @@
                         <a ng-click="signIn()" class="btn btn-lg facebook-button" style="margin-left:10px;"><i class="fa fa-facebook-square"></i> Login With Facebook</a>
                     </div>
                     <hr class="login-hr">
-                    <form role="form" name="loginForm" novalidate>
+                    <form role="form" name="loginForm" novalidate ng-class="{ 'has-error' : loginError}">
                         <div class="row">
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group" ng-class="{ 'has-error' : loginSubmitted && loginForm.username.$invalid }">
