--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -4,6 +4,31 @@
 
 */
 
+.fa-facebook-square {
+  padding-right:5px;
+}
+
+.facebook-button{
+  color: white;
+  background: #4A65BB;
+  background-image: -webkit-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: -moz-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: -ms-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: -o-linear-gradient(top, #4A65BB, #3b54A3);
+  background-image: linear-gradient(to bottom, #4A65BB, #3b54A3);
+}
+
+.facebook-button:hover{
+  color: white;
+  background: #5877D7;
+  background-image: -webkit-linear-gradient(top, #5877D7, #4863b6);
+  background-image: -moz-linear-gradient(top, #5877D7, #4863b6);
+  background-image: -ms-linear-gradient(top, #5877D7, #4863b6);
+  background-image: -o-linear-gradient(top, #5877D7, #4863b6);
+  background-image: linear-gradient(to bottom, #5877D7, #4863b6);
+  color: #FFFFFF !important;
+}
+
 @media screen and (max-width: 400px) {
     .hidden-mobile{
         display: none !important;
