--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -10,7 +10,7 @@
                         <li><a href="/welcome/#customers" role="tab" data-toggle="tab">For Foodies</a></li>
                         <li><a href="/welcome/#vendors" role="tab" data-toggle="tab">For Farmers</a></li>
                         <!-- <li><a class="pointer welcome-sign-in" ng-click="signIn()">Sign In</a></li> -->
-                        <a data-toggle="modal" data-target="#loginModal" class="btn btn-md beLocal-btn-filled" style="margin-left:10px;">Login</a>
+                        <a data-toggle="modal" ng-click="clearLoginModal()" data-target="#loginModal" class="btn btn-md beLocal-btn-filled" style="margin-left:10px;">Login</a>
                     </ul>
                 </div>
             </div>
@@ -110,71 +110,7 @@
         </div>
 </div>
 
-<!-- Login Modal -->
-<div class="modal fade" id="loginModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Login<br /><small>Please login with Facebook or enter your username and password.</small></h4>                
-            </div>
-            <div class="modal-body">  
-                <div class="container-fluid">
-                    <div style="text-align: center;">
-                        <a ng-click="signIn()" class="btn btn-lg facebook-button" style="margin-left:10px;"><i class="fa fa-facebook-square"></i> Login With Facebook</a>
-                    </div>
-                    <hr class="login-hr">
-                    <form role="form" name="loginForm" novalidate ng-class="{ 'has-error' : loginError}">
-                        <div class="row">
-                            <div class="col-xs-12 col-md-12">
-                                <div class="form-group" ng-class="{ 'has-error' : loginSubmitted && loginForm.username.$invalid }">
-                                    <label for="item-name">Username</label>
-                                    <input required ng-model="loginUsername" type="text" name="username" class="form-control" placeholder="Username" maxlength="40"/>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12 col-md-12">
-                                <div class="form-group" ng-class="{ 'has-error' : loginSubmitted && loginForm.password.$invalid }">
-                                    <label for="item-name">Password</label>
-                                    <input required ng-model="loginPassword" type="password" name="password" class="form-control" placeholder="Password" maxlength="40"/>
-                                </div>
-                            </div>
-                        </div>
-                    </form>                        
-                    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                      <div class="panel panel-default">
-                        <div data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne" class="panel-heading" role="tab" id="headingOne">
-                            <a style="color: #696969" aria-expanded="true" aria-controls="collapseOne">
-                              Forgot Password?
-                            </a>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                          <div class="panel-body">
-                            <form name="recoverInfoForm" role="form" novalidate>        
-                              <div style="margin-bottom: 0px;" class="form-group" ng-class="{ 'has-error' : (recoverInfoForm.email.$invalid || emailRecoverError) && recoverHasSubmitted }">
-                                  <label class="control-label">Email</label>             
-                                  <input type="email" name="email" class="form-control" ng-model="recoverEmail" required>
-                                  <p ng-show="emailRecoverError" class="help-block">{{emailRecoverMessage}}</p>                  
-                                  <p ng-show="recoverInfoForm.email.$invalid && recoverHasSubmitted" class="help-block" style="margin-bottom: 0px;"><small style="color: #a94442;">Please enter a valid email</small></p>
-                                </div>
-                              </form>
-                              <p><small>An email containing your username and password reset instructions will be sent to the email you specify above.</small></p>
-                              <button type="button" ng-click="recoverInformation()" class="btn beLocal-btn-filled pull-right">Send Recovery Email</button>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" ng-click="loginSubmit()" class="btn beLocal-btn-filled">Login Without Facebook</button>
-            </div>
-        </div>
-        <!-- /.modal-content -->
-    </div>
-</div>
+<login-modal></login-modal>
 
 <div class="modal fade" id="accountExistsModal">
   <div class="modal-dialog">
