Removed old registration workflow

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -137,15 +137,7 @@
         <h4 class="modal-title">No Valid Account</h4>
       </div>
       <div class="modal-body">
-        <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try creating one first by clicking one of the buttons below!</p>
-        <br>
-        <div style="text-align: center;">
-            <a ng-click="signUpAsCustomerModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up As a Foodie</a>
-            <span class="fb-button-break"><br><br></span>
-            <span style="margin-left: 10px; margin-right: 10px;">or</span>
-            <span class="fb-button-break"><br><br></span>            
-            <a ng-click="signUpAsVendorModal()" class="btn btn-lg facebook-button"><i class="fa fa-facebook-square"></i> Sign Up As a Farmer</a>
-        </div>
+        <p>Oops! We couldn't find an beLocal account registered with that Facebook account. Try signing up first!</p>
       </div>
       <div class="modal-footer no-top-margin">
         <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
