--- a/src/client/app/views/contactus.html
+++ b/src/client/app/views/contactus.html
@@ -1,7 +1,6 @@
 <div class="hidden-xs"><nav-bar></nav-bar></div>
 <div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
 
-
 <div class="customer-container center contactus-content">
 
 <h2 class="new-heading-style"> About beLocal</h2>
@@ -14,7 +13,7 @@
 <h2 class="new-heading-style"> The beLocal Team</h2>
 
 <p class="about-content"> 
-	beLocal was developed as a project for a senior level computer science course, Startup Programming (CSC 485B), at the University of Victoria. All of the beLocal developers are senior computer science and software engineering students at UVic who are foodies at heart and wanted to help the raise awareness about Victoria's local food community. For more information, or to track our progress, please visit our GitHub repository at <a href="https://github.com/rpanjwani/beLocal" target="_blank">https://github.com/rpanjwani/beLocal</a>
+	beLocal was developed as a project for a senior level computer science course, <a target="_blank" href="http://www.startup-programming.com">Startup Programming (CSC 485B)</a>, at the University of Victoria. All of the beLocal developers are senior computer science and software engineering students at UVic who are foodies at heart and wanted to help the raise awareness about Victoria's local food community. For more information, or to track our progress, please visit our GitHub repository at <a href="https://github.com/rpanjwani/beLocal" target="_blank">https://github.com/rpanjwani/beLocal</a>
 </p>
 
 <br>
