--- a/src/client/app/views/marketdetails.html
+++ b/src/client/app/views/marketdetails.html
@@ -36,7 +36,7 @@
                     <span class="glyphicon glyphicon-map-marker"></span> 
                     {{marketDetails.address.addr_line1}}, {{marketDetails.address.city}}, {{marketDetails.address.state}}
                 </a>
-                | <a href="{{marketDetails.webpage}}">Our Website</a>
+                | <a href="{{marketDetails.webpage}}" target="_blank">Our Website</a>
             </span>
             <hr>    
 
