Displayed information for market locations in the add location modal

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -29,6 +29,10 @@
   color: #FFFFFF !important;
 }
 
+.indent {
+  margin-left: 10px !important;
+}
+
 @media screen and (max-width: 400px) {
     .hidden-mobile{
         display: none !important;
