Updated strings for social media button

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -52,7 +52,7 @@
                     <span class="update-profile-sm-buttons pull-right">
                         <button class="btn beLocal-btn-filled" data-toggle="modal" ng-click="editProfile()" data-target="#profileModal">Edit Profile</button>
                         &nbsp;
-                        <button class="btn beLocal-btn-filled" data-toggle="modal" ng-click="generateSocialStrings()" data-target="#shareModal">Update Social Media</button>
+                        <button class="btn beLocal-btn-filled" data-toggle="modal" ng-click="generateSocialStrings()" data-target="#shareModal">Post to Social Media</button>
                     </span>
                 </div>
             </div>
@@ -660,7 +660,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Update Social Media<br /><small>Please review the following fields and check or uncheck the boxes below to update your various social media accounts.</small></h4>
+                <h4 class="modal-title">Post to Social Media<br /><small>Please review the following fields and check or uncheck the boxes below to update your various social media accounts.</small></h4>
             </div>
             <div class="modal-body">
                 <label><i class="fa fa-facebook-square"></i> Facebook Status Update</label> 
