added new markets

--- a/src/client/app/views/marketdetails.html
+++ b/src/client/app/views/marketdetails.html
@@ -44,8 +44,8 @@
                 <div class="no-bottom-margin small-header"><b>The {{marketDetails.name}} is closed for the season.</b></div>
             </div>
 
-            <div class="store-hours">
-		        <ul style="margin-bottom:0px" class="list-inline store-hours">
+            <div class="" style="padding-left:0px;">
+		        <ul style="margin-bottom:0px" class="list-inline">
 			        <li ng-repeat="day in marketDetails.address.hours">
 			            <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
 			        </li>
