--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -636,7 +636,8 @@
                         <div class="tab-pane active" id="marketLocation">
                             <form role="form" name="marketForm" novalidate>
                                 <div class="form-group">
-                                    <label>Select the Market You're Selling At:</label>
+                                    <label class="no-bottom-margin">Select the Market You're Selling At:</label>
+                                    <p><small>Please note that only markets that are currently open for the season will appear in this list.</small></p>
                                     <select ng-show="StateService.getAvailableMarketList().length > 0" ng-model="newLocationMarket" id="modalMarketPicker" class="form-control" ng-options="market as market.name for market in StateService.getAvailableMarketList()"></select>
                                     <div ng-show="newLocationMarket.name != null">
                                         <!-- 
