Fixed login on small screens.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -1,5 +1,5 @@
-<div class="hidden-xs"><nav-bar></nav-bar></div>
-<div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
+<nav-bar></nav-bar>
+<navbar-x-s></navbar-x-s>
 
 <!-- EACH OF THE TABS -->
 <div class="tab-content">
