--- a/src/client/app/views/marketdetails.html
+++ b/src/client/app/views/marketdetails.html
@@ -1,6 +1,6 @@
 <!-- NAVBAR -->
-<div class="hidden-xs"><nav-bar></nav-bar></div>
-<div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
+<nav-bar></nav-bar>
+<navbar-x-s></navbar-x-s>
 
 <!-- SELLER DETAILS -->
 <div class="customer-container">  
