--- a/src/client/app/views/contactus.html
+++ b/src/client/app/views/contactus.html
@@ -1,5 +1,5 @@
-<div class="hidden-xs"><nav-bar></nav-bar></div>
-<div ng-show="showXSNav"><navbar-x-s></navbar-x-s></div>
+<nav-bar></nav-bar>
+<navbar-x-s></navbar-x-s>
 
 <div class="customer-container center contactus-content">
 
