Added as featured on section to about us page.

--- a/src/client/app/views/contactus.html
+++ b/src/client/app/views/contactus.html
@@ -10,6 +10,7 @@
 </p>
 
 <br>
+
 <h2 class="new-heading-style"> The beLocal Team</h2>
 
 <p class="about-content"> 
@@ -17,7 +18,6 @@
 </p>
 
 <br>
-
 
 <div class="row developer-pic">
 	<div class="col-md-3 hidden-xs"></div>
@@ -58,9 +58,11 @@
 	<div class="col-md-4 col-xs-2"></div>
 </div>
 
-
 <br><br>
 
+<h2 class="new-heading-style"> As Featured On</h2>
+<a href="http://www.luxurybc.ca"><img class="featured-image" src="/images/featured_in/luxurybc.png" /></a>
+<br><br>
 
 <h2 class="new-heading-style"> We Would Love to Hear From You </h2>
 <p  class="about-content">beLocalVictoria.me is still a work in progress. If you have questions, feedback, or suggestions, please feel free to email us at <a href="mailto:{{emailAddress}}">{{emailAddress}}</a></p>
