--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -4,9 +4,31 @@
 
 */
 
+.error{
+  color: rgb(182, 99, 98);
+  padding-left: 5px;
+}
+
+.profile-modal input.ng-invalid {
+  background-color: rgb(255, 226, 226);
+}
+
+.profile-modal textarea.ng-invalid{
+  background-color: rgb(255, 226, 226);
+}
+
 .fa-facebook-square {
   padding-right:5px;
 }
+
+#locationModal .has-error input{
+  background-color: rgb(255, 226, 226);
+}
+
+#locationModal .has-error textarea{
+  background-color: rgb(255, 226, 226);
+}
+
 
 .facebook-button{
   color: white;
