--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -13,7 +13,7 @@
 
 
         <div class="col-sm-5 vendor-avatar">
-            <div class="vendor-avatar-img pointer" data-toggle="modal" ng-click="editProfile()" data-target="#profileModal" style="background-image:url({{StateService.getCurrentUser().vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
+            <div class="vendor-avatar-img" style="background-image:url({{StateService.getCurrentUser().vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
                 <div ng-hide="StateService.getCurrentUser().vendor.photo.image_url != null" class="center" style="color:#ffffff;">
                 </div>
             </div>
@@ -292,7 +292,7 @@
 <!-- START OF MODALS -->
 
 <!-- Seller Profile Modal -->
-<div class="modal fade" id="profileModal">
+<div class="modal fade profile-modal" id="profileModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -303,7 +303,7 @@
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">                   
-                    <form role="form" name="profileForm" novalidate>
+                    <form role="form" class="profile-modal" name="profileForm" novalidate>
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group" ng-class="{ 'has-error' : profileForm.imageField.$invalid }">
@@ -317,7 +317,10 @@
                             <div class="col-xs-12">
                                 <div class="form-group" ng-class="{ 'has-error' : profileForm.companyName.$invalid }">
                                     <label for="company-name">Company Name</label> 
-                                    <input required ng-model="currentUser.vendor.company_name" type="text" name="companyName" class="form-control" id="company-name" placeholder="Company Name" maxlength="30"/>
+                                    <input required ng-model="currentUser.vendor.company_name" type="text" name="companyName" class="form-control profile-modal" id="company-name" placeholder="Company Name" maxlength="30"/>
+                                    <span class="error pull-right" ng-show="profileForm.companyName.$invalid">
+                                        Your company's name is required.
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -358,24 +361,35 @@
                                 </div>
                             </div> -->
                             <div class="row">
-                                <div class="col-xs-6">
+                                <div class="col-xs-12">
                                     <div class="form-group" ng-class="{ 'has-error' : profileForm.city.$invalid }">
                                         <label for="item-name">City</label>
                                         <input required ng-model="currentUser.vendor.address.city" type="text" name="city" class="form-control" id="item-name" placeholder="City" maxlength="20"/>
-                                    </div>
-                                </div>
-                                <div class="col-xs-6">
-                                    <div class="form-group" ng-class="{ 'has-error' : profileForm.province.$invalid }">
-                                        <label for="item-name">Province</label>
-                                        <input required ng-model="currentUser.vendor.address.state" type="text" name="province" class="form-control" id="item-name" placeholder="Province or Territory" maxlength="2"/>
+                                        <span class="error pull-right" ng-show="profileForm.city.$invalid">
+                                            Your city is required.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-6">
+                                <div class="col-xs-12">
+                                    <div class="form-group" ng-class="{ 'has-error' : profileForm.province.$invalid }">
+                                        <label for="item-name">Province</label>
+                                        <input required ng-model="currentUser.vendor.address.state" type="text" name="province" class="form-control" id="item-name" placeholder="Province or Territory" maxlength="2"/>
+                                        <span class="error pull-right" ng-show="profileForm.province.$invalid">
+                                            Your province is required.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
                                     <div class="form-group" ng-class="{ 'has-error' : profileForm.country.$invalid }">
                                         <label for="item-name">Country</label>
                                         <input required ng-model="currentUser.vendor.address.country" type="text" name="country" class="form-control" id="item-name" placeholder="Country" maxlength="36"/>
+                                        <span class="error pull-right" ng-show="profileForm.country.$invalid">
+                                            Your country is required.
+                                        </span>
                                     </div>
                                 </div><!-- 
                                 <div class="col-xs-6">
@@ -392,7 +406,12 @@
                                     <label for="company-description">About Your Company<br>
                                     </label>
                                     <textarea required ng-model="currentUser.vendor.description" type="text" name="descriptionField" class="form-control" id="company-description" placeholder="About Your Company" maxlength="850"/>
-                                    <p class="pull-right">{{850 - currentUser.vendor.description.length}} characters remaining</p>
+                                    <span class="error pull-right" ng-show="profileForm.descriptionField.$invalid">
+                                        Company description is required.
+                                    </span>
+                                    <p class="pull-right" ng-hide="profileForm.descriptionField.$invalid">
+                                        {{850 - currentUser.vendor.description.length}} characters remaining
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -513,13 +532,16 @@
                         </ul>
                     </div>
                     <div class="tab-content">
-                        <div class="tab-pane" id="customLocation">                                 
+                        <div class="tab-pane" id="customLocation" class="profile-modal">                                 
                             <form role="form" name="locationForm" novalidate>
                                 <div class="row">
                                     <div class="col-xs-6 col-md-6">
                                         <div class="form-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationField.$invalid }">
                                             <label class="control-label">Location Name</label>
                                             <input required ng-model="locationName" type="text" name="locationField" class="form-control" id="item-name" placeholder="Location Name" maxlength="35"/>
+                                            <span class="error pull-right" ng-show="newLocationSubmitted && locationForm.locationField.$invalid">
+                                                The location's name is required.
+                                            </span>
                                         </div>
                                     </div>                        
                                     <div class="col-xs-6 col-md-6">
@@ -606,6 +628,9 @@
                                           <div class="form-group" ng-class="{ 'has-error' : (locationForm.addressText.$invalid ) && newLocationSubmitted }">
                                             <label class="control-label">Address</label>
                                             <input type="text" autocomplete="off" name="addressText" typeahead="result.formatted_address for result in getLocation($viewValue)" typeahead-on-select="makeSelection($item)" class="form-control" ng-model="addressSearchText" placeholder="Search for an Address" required>
+                                            <span class="error pull-right" ng-show="newLocationSubmitted && locationForm.addressText.$invalid">
+                                                Address is not vaild.
+                                            </span>
                                           </div>
                                     </div>                                                                                               
                                 </div>                                            
@@ -613,13 +638,13 @@
                                     <div class="col-xs-6 col-md-6" ng-class="{'has-error': newLocationSubmitted && locationForm.phoneField.$invalid}">
                                         <div class="form-group">
                                             <label class="control-label">Phone Number</label>
-                                            <input required ng-model="phoneAtLocation" type="text" class="form-control" id="item-name" name="phoneField" placeholder="Phone Number" maxlength="20"/>
+                                            <input ng-model="phoneAtLocation" type="text" class="form-control" id="item-name" name="phoneField" placeholder="Optional Phone Number" maxlength="20"/>
                                         </div>
                                     </div>
                                     <div class="col-xs-6 col-md-6">
                                         <div class="form-group" ng-class="{'has-error': newLocationSubmitted && locationForm.emailField.$invalid}">
                                             <label class="control-label">Email</label>
-                                            <input required type="text" ng-model="emailAtLocation" class="form-control" id="item-name" name="emailField" placeholder="Email" maxlength="40"/>
+                                            <input type="text" ng-model="emailAtLocation" class="form-control" id="item-name" name="emailField" placeholder="Optional Email" maxlength="40"/>
                                         </div>
                                     </div>                                                                   
                                 </div>
@@ -627,7 +652,8 @@
                                     <div class="col-xs-12 col-md-12">
                                         <div class="form-group no-bottom-margin" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationDescriptionField.$invalid }">
                                             <label class="control-label">Location Details</label>
-                                            <textarea required ng-model="locationDescription" type="text" name="locationDescriptionField" class="form-control" placeholder="Location Details" maxlength="300"/>
+                                            <textarea ng-model="locationDescription" type="text" name="locationDescriptionField" class="form-control" placeholder="Optional description about this selling location." maxlength="300"/>
+
                                         </div>
                                     </div>                        
                                 </div>                                                          
@@ -636,8 +662,7 @@
                         <div class="tab-pane active" id="marketLocation">
                             <form role="form" name="marketForm" novalidate>
                                 <div class="form-group">
-                                    <label class="no-bottom-margin">Select the Market You're Selling At:</label>
-                                    <p><small>Please note that only markets that are currently open for the season will appear in this list.</small></p>
+                                    <label>Select the Market You're Selling At:</label>
                                     <select ng-show="StateService.getAvailableMarketList().length > 0" ng-model="newLocationMarket" id="modalMarketPicker" class="form-control" ng-options="market as market.name for market in StateService.getAvailableMarketList()"></select>
                                     <div ng-show="newLocationMarket.name != null">
                                         <!-- 
@@ -658,7 +683,7 @@
                                         <ul class="list-inline store-hours indent">&nbsp
                                             <li ng-repeat="day in newLocationMarket.address.hours">
                                                 <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
-                                            </li>
+                                            </li>2
                                         </ul>
                                     </div>
 
