Updated LuxuryBC link.

--- a/src/client/app/views/contactus.html
+++ b/src/client/app/views/contactus.html
@@ -61,7 +61,7 @@
 <br><br>
 
 <h2 class="new-heading-style"> As Featured On</h2>
-<a href="http://www.luxurybc.ca"><img class="featured-image" src="/images/featured_in/luxurybc.png" /></a>
+<a href="http://luxurybc.ca/food/uvic-startup-belocal/"><img class="featured-image" src="/images/featured_in/luxurybc.png" /></a>
 <br><br>
 
 <h2 class="new-heading-style"> We Would Love to Hear From You </h2>
