--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -324,8 +324,10 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group">
-                                    <label for="company-description">Company Phone Number</label>
-                                    <input ng-model="currentUser.vendor.phone" type="text" name="number" class="form-control" id="company-description" placeholder="Optional Phone Number" maxlength="20"/>
+                                    <div class="form-group" ng-class="{ 'has-error' : profileForm.number.$invalid }">
+                                        <label for="company-description">Company Phone Number</label>
+                                        <input phone ng-model="currentUser.vendor.phone" type="text" name="number" class="form-control" id="company-description" placeholder="Optional Phone Number" maxlength="20"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -613,7 +615,7 @@
                                     <div class="col-xs-6 col-md-6" ng-class="{'has-error': newLocationSubmitted && locationForm.phoneField.$invalid}">
                                         <div class="form-group">
                                             <label class="control-label">Phone Number</label>
-                                            <input required ng-model="phoneAtLocation" type="text" class="form-control" id="item-name" name="phoneField" placeholder="Phone Number" maxlength="20"/>
+                                            <input phone required ng-model="phoneAtLocation" type="text" class="form-control" id="item-name" name="phoneField" placeholder="Phone Number" maxlength="20"/>
                                         </div>
                                     </div>
                                     <div class="col-xs-6 col-md-6">
