--- a/src/client/app/views/marketdetails.html
+++ b/src/client/app/views/marketdetails.html
@@ -8,7 +8,7 @@
 
 
         <div class="col-sm-5 vendor-avatar">
-            <div class="vendor-avatar-img" style="background-image:url({{marketDetails.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
+            <div class="vendor-avatar-img" ng-style="{'background-image': 'url('+marketDetails.photo.image_url+')'}" style="background-size: cover; background-repeat: no-repeat; background-position: center;">
                 <div class="col-sm-12">
                     <div class="pull-right like-button-position" data-toggle="tooltip" style="display:inline-block" data-placement="left" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
                       <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(marketDetails, 'market')" type="button" class="btn btn-default beLocal-btn-default">
