--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -10,14 +10,14 @@
 
 <div class="new-formatting-container customer-container" ng-class="{'is-inactive' : !isCurrentUserActive}">  
     <div class="row vendor-profile-header">
-
-
         <div class="col-sm-5 vendor-avatar">
-            <div class="vendor-avatar-img pointer" data-toggle="modal" ng-click="editProfile()" data-target="#profileModal" style="background-image:url({{StateService.getCurrentUser().vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
+            <div id="vendorProfileImage" class="vendor-avatar-img pointer" data-toggle="modal" ng-click="triggerImageSelect()" style="background-image:url({{StateService.getCurrentUser().vendor.photo.image_url}}); background-size: cover; background-repeat: no-repeat; background-position: center;">
                 <div ng-hide="StateService.getCurrentUser().vendor.photo.image_url != null" class="center" style="color:#ffffff;">
                 </div>
             </div>
-
+            <button type="button" data-toggle="modal" ng-click="triggerImageSelect()" class="btn beLocal-btn-filled">
+                <span>Edit Profile Image</span>
+            </button>
         </div>
         <div class="col-sm-7 vendor-header-content">
 
@@ -64,8 +64,6 @@
             </div>
         </div>
     </div>
-
-
 <!--Display Seller's Locations-->
     <hr>
     <div class="row">
@@ -306,16 +304,6 @@
                     <form role="form" name="profileForm" novalidate>
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="form-group" ng-class="{ 'has-error' : profileForm.imageField.$invalid }">
-                                    <label for="profile-image">Change Profile Image</label><br />
-                                    <img src="#" id="profilePreview" />
-                                    <button type="button" data-toggle="modal" data-target="#profileImageModal" ng-click="triggerImageSelect()" class="btn beLocal-btn-filled">
-                                    <span>Choose Image</span></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12">
                                 <div class="form-group" ng-class="{ 'has-error' : profileForm.companyName.$invalid }">
                                     <label for="company-name">Company Name</label> 
                                     <input required ng-model="currentUser.vendor.company_name" type="text" name="companyName" class="form-control" id="company-name" placeholder="Company Name" maxlength="30"/>
@@ -423,7 +411,7 @@
                 <div class="container-fluid">  
                     <div class="row">
                         <div class="col-xs-12 col-md-12">
-                            <input onchange="angular.element(this).scope().handleProfileImageFileSelect(this.files)" name="imageField" type="file" id="profile-image">
+                            <input style="display:none" onchange="angular.element(this).scope().handleProfileImageFileSelect(this.files)" name="imageField" type="file" id="profile-image">
                             <div class="crop-image-wrapper">
                                  <img-cropped src='{{profileImage|trusted}}' selected='selected(cords)'/>
                             </div>
@@ -433,7 +421,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" ng-click="" class="btn beLocal-btn-filled">Done</button>
+                <button type="button" ng-click="uploadProfileImage()" class="btn beLocal-btn-filled">Done</button>
             </div>
         </div>
     </div>
